# radhelper-embedded

./: .gitignore  README.md  decode_frames.ipynb  dut_config.yaml  frame_id_formatting.yaml  pyproject.toml  read_write copy.py  server_config.yaml  simple_test.py  uart_receiver.py  validate_toml.py
dut_tester/: .gitignore  .yapfignore  README.md  UART  UART_config.toml  data_process.py  pyproject.toml
dut_tester/DUT_Tester/: __main__.py  log_id.py  main.py
dut_tester/DUT_Tester/Client/: __init__.py  client.py  log.txt  log_parser bruno.ipynb  log_parser.ipynb  log_parser.py  log_parser_dut23.ipynb  parse_frame.py  payload_decoding.py  rsync.sh  time.py  uart_monitor.py
dut_tester/DUT_Tester/Client/logs/dut0/logs_client/: Client_dut0_monitor_20231206-223040.log.2023-12-06_22-40  Client_dut0_monitor_20231206-223040.log.2023-12-06_22-50  Client_dut0_monitor_20231206-223040.log.2023-12-06_23-31  Client_dut0_monitor_20231206-223040.log.2023-12-07_02-12  Client_dut0_monitor_20231206-223040.log.2023-12-07_03-42  Client_dut0_monitor_20231206-223040.log.2023-12-07_05-23  Client_dut0_monitor_20231207-103512.log.2023-12-07_10-45  Client_dut0_monitor_20231207-103512.log.2023-12-07_12-05  Client_dut0_monitor_20231207-133227.log.2023-12-07_14-12  Client_dut0_monitor_20231207-163655.log.2023-12-07_17-07  Client_dut0_monitor_20231207-163655.log.2023-12-07_17-17  Client_dut0_monitor_20231207-183143.log.2023-12-07_19-32  Client_dut0_monitor_20231207-183143.log.2023-12-07_19-52  Client_dut0_monitor_20231207-183143.log.2023-12-07_21-12  Client_dut0_monitor_20231207-235427.log.2023-12-08_01-35  Client_dut0_monitor_20231207-235427.log.2023-12-08_02-35  Client_dut0_monitor_20231207-235427.log.2023-12-08_03-25  Client_dut0_monitor_20231207-235427.log.2023-12-08_03-56  Client_dut0_monitor_20231208-031706.log.2023-12-08_08-53  Client_dut0_monitor_20231208-091707.log.2023-12-08_11-03  Client_dut0_monitor_20231208-091707.log.2023-12-08_11-13  (+52 more)
dut_tester/DUT_Tester/Server/: log_monitor.py  server.py
dut_tester/DUT_Tester/power_switch/: error_codes.py  powerswitch.py
dut_tester/util/: export_syslogs.sh  ina.py
dut_tester/util/time_sync/: doc.md  known_macAddresses.txt
trikaneros_tester/: README.md  pyproject.toml
trikaneros_tester/Trikaneros_Tester/: __main__.py  log_id.py  main.py  util.py
trikaneros_tester/Trikaneros_Tester/power_switch/: powerswitch.py
trikaneros_tester/util/: clk.py  gpio_read.py  gpio_write.py  trikaneros_openocd.cfg
trikaneros_tester/util/time_sync/: README.md  time_sync_script.sh
(+812 files in other folders)
