[build-system]
requires = [
"setuptools>=42",
"wheel",
]
build-backend = "setuptools.build_meta"
[project]
name = "DUT_Tester"
description = "RadHelper Tester - Automated testing utility for fault tolerance monitoring in radiation environments"
version = '0.0.2'
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
'argparse',
'clang-format',
'yapf',
'isort',
'coloredlogs',
'logging',
'python-json-logger',
'pigpio',
'openocd',
'pi-ina219',
'requests',
'toml',
'ping3', 
'paramiko',
'icmplib', 
'scapy',
]
[tool.setuptools]
packages = ['DUT_Tester']